--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
- html,
-      body,
-      #viewDiv {
-        padding: 0;
-        margin: 10;
-        height: 600px;
-        width: 600px;
-      }
+#mapid { height: 500px;
+         width: 500px
+}
